# Pixtract

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  release.yml  test.yml
pixtract/: cli.py  config.py  main.py  processing.py  utils.py
tests/: test_processing.py  test_utils.py
