[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixtract"
version = "0.1.0"
authors = [
  { name="Rahatul Ghazi", email="rahatulghazi@gmail.com" },
]
description = "A command-line tool to extract high-quality frames from videos."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "opencv-python",
    "scikit-image",
    "tqdm",
    "colorama",
    "imagehash",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
pixtract = "pixtract.__main__:main"

[tool.setuptools.packages.find]
exclude = ["Processed_Frames*"]